# MasterThesis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  todo.txt
SystemDesign/Config/: config.json
SystemDesign/DeviceAPI/: api.csv
SystemDesign/Diagrams/: Components.drawio  Database.drawio  DownloadComponent.drawio  ModelEvaluator.drawio  TestingComponent.drawio  sequenceDiagram.txt
SystemDesign/Diagrams/New folder/: Copy of Components.drawio  Copy of DownloadComponent.drawio
SystemDesign/Diagrams/xml/: Database.drawio  Downloader.drawio  Untitled Diagram (1).drawio
SystemDesign/Report/: report.md  report_v1.md  report_v2.md
deviceInference/: .dockerignore  Dockerfile  build.sh  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
deviceInference/app/: config.py  main.py  schemas.py
deviceInference/app/evaluate/: router.py  schemas.py  services.py
deviceInference/app/evaluate/tflite/: config.py  interpreter.py  services.py
deviceInference/app/model/: config.py  router.py  schemas.py  services.py
deviceInference/evaluate/: schemas.py  services.py
deviceInference/model/: config.py  router.py  services.py
deviceInference/tflite/: inference.py
modelTester/: configuration.py  develop.py  modelTester.py  preds.npy  requirements.txt  target.npy
modelTester/configurationHandler/: cfgParser.py  configurations.py
modelTester/downloader/: controller.py
modelTester/modelEvaluator/: controller.py  pipeline.py
modelTester/modelEvaluator/device/: apiCalls.py  (+3 more)
test/: requirements-test.txt
test/configs/: first_cfg.json
(+12 files in other folders)
