[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deviceInference"
version = "0.0.0.dev0"
authors = [
    {name = "Jakub Kasem"},
]


requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Developers",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "requests",
    "pyserial",
    "fabric2",
    "httpx",
    "asyncssh",
    "python-multipart",
    "python-dotenv",
    "pydantic-settings",
]
